Reversed merge of branch

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -1,6 +1,6 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= @GENCL@ docs sdl libs ai graphics unix tools 
+SUBDIRS 		= @GENCL@ docs sdl libs ai unix tools
 
 EXTRA_DIST 		= *.cpp *.h *.inc
 
