Added SDL_ttf to make system  Worked on new graphics engine

--- a/source/tools/Makefile.in
+++ b/source/tools/Makefile.in
@@ -96,6 +96,7 @@ RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
+SDL_TTF_LDADD = @SDL_TTF_LDADD@
 SGML2MAN = @SGML2MAN@
 SIGC_CFLAGS = @SIGC_CFLAGS@
 SIGC_LIBS = @SIGC_LIBS@
