--- a/source/unix/mapeditor/Makefile.am
+++ b/source/unix/mapeditor/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.19.2.1 2004-09-26 20:02:52 mbickel Exp $
+## $Id: Makefile.am,v 1.19.2.2 2004-10-01 19:05:43 mbickel Exp $
 
 vpath %.cpp ../..
 
@@ -32,7 +32,7 @@ gameevent_dialogs.cpp clipboard.cpp
 asc_mapedit_LDADD   	= $(top_builddir)/source/sdl/libsdl.la \
 $(top_builddir)/source/libs/triangul/libtriangul.la @LDADDLIBBZ2@ \
 $(PARAGUI_LIBS) $(SIGC_LIBS) $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
-$(top_builddir)/source/graphics/libgraphics.la
+$(top_builddir)/source/graphics/libgraphics.la @SDL_TTF_LDADD@
 
 #asc_map2pcx_SOURCES	= map2pcx.cpp typen.cpp strtmesg.cpp \
 #stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp \
