--- a/config.h.in
+++ b/config.h.in
@@ -31,6 +31,9 @@
 /* Define to 1 if you have the `SDL_mixer' library (-lSDL_mixer). */
 #undef HAVE_LIBSDL_MIXER
 
+/* Define to 1 if you have the `SDL_ttf' library (-lSDL_ttf). */
+#undef HAVE_LIBSDL_TTF
+
 /* Define to 1 if you have the <limits> header file. */
 #undef HAVE_LIMITS
 
