--- a/configure.in
+++ b/configure.in
@@ -140,6 +140,25 @@ SDL_mixer.RPM installed, perhaps the SDL_mixer-devel.RPM is missing.
 If your distribution does not include the SDL_image library, you can get it 
 from http://www.libsdl.org/projects/SDL_mixer/ ]]))
 
+AC_CHECK_LIB( SDL_mixer, 
+              Mix_PlayChannelTimed,, 
+	      AC_MSG_ERROR( [[
+ASC requires the SDL_mixer library. If you have a distribution supplied 
+SDL_mixer.RPM installed, perhaps the SDL_mixer-devel.RPM is missing. 
+If your distribution does not include the SDL_image library, you can get it 
+from http://www.libsdl.org/projects/SDL_mixer/ ]]))
+
+
+AC_CHECK_LIB( SDL_ttf, 
+              TTF_RenderText_Solid,, 
+	      AC_MSG_ERROR( [[
+ASC requires the SDL_ttf library. If you have a distribution supplied 
+SDL_ttf.RPM installed, perhaps the SDL_ttf-devel.RPM is missing. 
+If your distribution does not include the SDL_ttf library, you can get it 
+from http://www.libsdl.org/projects/SDL_ttfr/ ]]))
+SDL_TTF_LDADD="-lSDL_ttf"
+AC_SUBST(SDL_TTF_LDADD)
+
 
 
 # Check for libsigc++
@@ -400,12 +419,12 @@ AC_OUTPUT(  Makefile \
 	    source/clparser/Makefile \
 	    source/docs/Makefile \
 	    source/docs/en/Makefile \
+            source/graphics/Makefile \
 	    source/libs/Makefile \
 	    source/libs/sdlmm/Makefile \
 	    source/libs/sdlmm/src/Makefile \
 	    source/libs/triangul/Makefile \
 	    source/sdl/Makefile \
-	    source/graphics/Makefile \
 	    source/tools/Makefile \
 	    source/tools/lib/Makefile \
 	    source/tools/linux/Makefile \
