--- a/configure.in
+++ b/configure.in
@@ -122,6 +122,15 @@ SDL_image.RPM installed, perhaps the SDL_image-devel.RPM is missing.
 If your distribution does not include the SDL_image library, you can get it 
 from http://www.libsdl.org/projects/SDL_image/ ]]))
 
+#AC_MSG_CHECKING("SDL_image.h")
+#AC_TRY_COMPILE( [#include <SDL_image.h>],[return 0;],
+#	      AC_MSG_ERROR([[ 
+#ASC requires the SDL_image library. If you have a distribution supplied 
+#SDL_image.RPM installed, perhaps the SDL_image-devel.RPM is missing. 
+#If your distribution does not include the SDL_image library, you can get it 
+#from http://www.libsdl.org/projects/SDL_image/ ]]) )
+#AC_MSG_RESULT("yes")
+
 
 AC_CHECK_LIB(jpeg, jpeg_CreateDecompress,,
 	      AC_MSG_ERROR([[
@@ -140,13 +149,15 @@ SDL_mixer.RPM installed, perhaps the SDL_mixer-devel.RPM is missing.
 If your distribution does not include the SDL_image library, you can get it 
 from http://www.libsdl.org/projects/SDL_mixer/ ]]))
 
-AC_CHECK_LIB( SDL_mixer, 
-              Mix_PlayChannelTimed,, 
-	      AC_MSG_ERROR( [[
-ASC requires the SDL_mixer library. If you have a distribution supplied 
-SDL_mixer.RPM installed, perhaps the SDL_mixer-devel.RPM is missing. 
-If your distribution does not include the SDL_mixer library, you can get it 
-from http://www.libsdl.org/projects/SDL_mixer/ ]]))
+
+#AC_MSG_CHECKING("SDL_mixer.h")
+#AC_TRY_COMPILE( [#include <SDL_mixer.h>],[return 0;],
+#	      AC_MSG_ERROR( [[
+#ASC requires the SDL_mixer library. If you have a distribution supplied 
+#SDL_mixer.RPM installed, perhaps the SDL_mixer-devel.RPM is missing. 
+#If your distribution does not include the SDL_mixer library, you can get it 
+#from http://www.libsdl.org/projects/SDL_mixer/ ]]))
+#AC_MSG_RESULT("yes")
 
 
 AC_CHECK_LIB( SDL_ttf, 
@@ -155,9 +166,18 @@ AC_CHECK_LIB( SDL_ttf,
 ASC requires the SDL_ttf library. If you have a distribution supplied 
 SDL_ttf.RPM installed, perhaps the SDL_ttf-devel.RPM is missing. 
 If your distribution does not include the SDL_ttf library, you can get it 
-from http://www.libsdl.org/projects/SDL_ttfr/ ]]))
+from http://www.libsdl.org/projects/SDL_ttf/ ]]))
 SDL_TTF_LDADD="-lSDL_ttf"
 AC_SUBST(SDL_TTF_LDADD)
+
+#AC_MSG_CHECKING("SDL_ttf.h")
+#AC_TRY_COMPILE( [#include <SDL_ttf.h>],[return 0;],
+#	      AC_MSG_ERROR( [[
+#ASC requires the SDL_ttf library. If you have a distribution supplied 
+#SDL_ttf.RPM installed, perhaps the SDL_ttf-devel.RPM is missing. 
+#If your distribution does not include the SDL_ttf library, you can get it 
+#from http://www.libsdl.org/projects/SDL_ttf/ ]]))
+#AC_MSG_RESULT("yes")
 
 
 
@@ -431,7 +451,7 @@ AC_OUTPUT(  Makefile \
 
 AC_ARG_ENABLE( debug, [  --enable-debug          enables some debugging options and output], ENABLEDEBUG=1 )
 if test "X$ENABLEDEBUG" = "X1"; then
-   CXXFLAGS="$CXXFLAGS -O0 -g3"
+   CXXFLAGS="$CXXFLAGS -O0 -g3 -Wall"
    echo SDL_CFLAGS $SDL_CFLAGS
    echo SDL_LIBS $SDL_LIBS
 dnl   echo SDLMM_CFLAGS $SDLMM_CXXFLAGS
