--- a/source/ai/Makefile.in
+++ b/source/ai/Makefile.in
@@ -107,7 +107,7 @@ install_sh = @install_sh@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-AM_CXXFLAGS = @SDL_CFLAGS@ @SIGC_CFLAGS@ -Dsgmain
+AM_CXXFLAGS = @SDL_CFLAGS@ @SIGC_CFLAGS@ @PARAGUI_CFLAGS@ -Dsgmain
 
 noinst_LTLIBRARIES = libai.la
 
